[FIX] AA Sov Timer contrast changes in v2.4.2

--- a/tnnt_templates/static/tnnt_templates/theme/terra-nanotech/aav4/css/community-app-fixes.css
+++ b/tnnt_templates/static/tnnt_templates/theme/terra-nanotech/aav4/css/community-app-fixes.css
@@ -81,6 +81,11 @@
     .aa-sovtimer-upcoming-campaign td {
         background-color: rgb(248 148 6 / 25%) !important;
     }
+
+    .table-striped.aa-sovtimer-campaigns > tbody > tr:nth-of-type(odd) > *,
+    .table-striped.aa-sovtimer-campaigns > tbody > tr:nth-of-type(even) > * {
+        --bs-table-color-type: var(--bs-table-striped-color) !important;
+    }
 }
 
 /* END App: AA Sovtimer
